# CrossGate-Legacy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup_requirements.py
engines/: CMakeLists.txt
engines/modules/assets/src/: anime_data_reader.cpp  anime_info_reader.cpp  anime_resource_data_reader.cpp  anime_resource_info_reader.cpp  assets_path_info.cpp  graphics_data_reader.cpp  graphics_info_reader.cpp  graphics_resource_file_data_reader.cpp  graphics_resource_file_info_reader.cpp  palette_reader.cpp
engines/modules/assets/tests/: test_anime_data_reader.cpp  test_anime_resource_data_reader.cpp  test_anime_resource_info_reader.cpp  test_graphics_resource_file_data_reader.cpp  test_graphics_resource_file_info_reader.cpp  test_palette_reader.cpp
engines/modules/common/src/: env.cpp  formatters.cpp  matrix.cpp  to_str.cpp
engines/modules/common/src/common/: env.cpp  results.cpp  version.cpp
engines/modules/common/tests/: CMakeLists.txt  test_common_enums.cpp  test_formatters.cpp  test_vector.cpp
engines/modules/common/tests/common/: test_env.cpp
engines/modules/engine/: CMakeLists.txt
engines/modules/engine/src/: client_engine.cpp  ecs.h  engine_components.h
engines/modules/engine/src/assets/: assets_reader_init_system.cpp
engines/modules/engine/src/engine/: client_engine.cpp  engine_components.h  error_system.h  state_system.h
engines/modules/engine/src/render/: render_components.h  render_device_destroy_system.cpp  render_device_init_system.cpp  render_systems.h
engines/modules/engine/src/scene/: scene_components.h  scene_manager_destroy_system.cpp  scene_systems.h  (+1 more)
engines/modules/render/: CMakeLists.txt
engines/modules/render/include/cgl/render/: semaphore.h
engines/modules/render/src/vulkan/: command_buffer_list.h  common.h  device.cpp  device.h  fence.cpp  framebuffer.h  swapchain.h
engines/modules/render/src/vulkan/render_pass/: init_scene_render_pass_impl.cpp
engines/modules/settings/: CMakeLists.txt  engine_runtime_settings.json  engine_settings.json  engine_static_settings.json  generate_runtime_settings.py  generate_settings.py  generate_static_settings.py
engines/modules/settings/include/cgl/settings/: settings.h
engines/modules/settings/tests/: CMakeLists.txt  test_settings.cpp
engines/modules/trace/: CMakeLists.txt
engines/modules/trace/include/cgl/trace/: logger.h
engines/modules/trace/src/: logger.cpp
engines/modules/trace/src/logger/: logger.cpp
engines/modules/trace/tests/: CMakeLists.txt  test_logger.cpp
engines/modules/trace/tests/logger/: test_logger.cpp
engines/modules/utils/: CMakeLists.txt
engines/modules/utils/tests/: CMakeLists.txt  test_ini.cpp
engines/src/assets/: assets_components.h  assets_reader_init_system.cpp  assets_system.h
engines/src/engine/: ecs.h  error_system.h
engines/src/render/: render_components.h  render_device_init_system.cpp
engines/src/scene/: scene_manager_destroy_system.cpp  scene_manager_system.cpp  scene_systems.h
engines/src/scene/init_scene/: init_scene_render_draw_system.cpp  init_scene_render_init_system.cpp  init_scene_system.cpp  init_scene_systems.h
engines/src/window/: window_input_system.cpp  window_systems.h
include/cgl/character/: direction_types.h
include/cgl/core/: results.h  version.h
include/cgl/resources/: anime_resource.h  anime_resource_data_reader.h  anime_resource_info_reader.h  graphics_resource_file_data_reader.h  graphics_resource_file_info_reader.h  palette_reader.h  resource_types.h
include/cgl/settings/: settings.h  settings_loader.h
include/cgl/utils/: enum_string_helper.h
modules/assets/: CMakeLists.txt
modules/assets/include/cgl/assets/: anime_info_reader.h  graphics_data_reader.h  graphics_info_reader.h
modules/assets/src/: anime_data_reader.cpp  anime_info_reader.cpp  assets_path_info.h  graphics_info_reader.cpp  palette_reader.cpp
modules/assets/tests/: CMakeLists.txt  test_anime_info_reader.cpp  test_graphics_file_data_reader.cpp  test_graphics_file_info_reader.cpp
modules/common/: CMakeLists.txt
modules/common/src/: env.cpp  formatters.cpp
modules/common/tests/: CMakeLists.txt  test_env.cpp  test_matrix.cpp
modules/graphics/: CMakeLists.txt
modules/graphics/src/: alloc_entries.cpp  buffer_upload_manager.cpp  formatters.cpp
modules/graphics/src/vulkan/: buffer.cpp  buffer.h  buffer_allocator.cpp  buffer_allocator.h  command_buffer_list.cpp  command_buffer_list.h  common.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.h  queue.cpp  queue.h  render_pass.h  semaphore.cpp  semaphore.h  staging_buffer.cpp  staging_buffer.h  swapchain.cpp  swapchain.h  transfer_buffer.cpp
modules/graphics/tests/: CMakeLists.txt  test_graphics_basic_draw.cpp  test_graphics_buffer_allocator.cpp  test_graphics_buffer_upload_manager.cpp  test_graphics_transfer_buffer.cpp  test_transfer_buffer.cpp
modules/render/src/vulkan/: CMakeLists.txt  command_buffer_list.cpp  fence.h  queue.cpp  queue.h  render_pass.h  semaphore.h  swapchain.cpp
modules/settings/: CMakeLists.txt  engine_config.json  generate_config.py  generate_settings.py
modules/settings/tests/: test_settings.cpp
modules/trace/tests/: CMakeLists.txt
modules/utils/src/: ini.cpp
modules/utils/tests/: CMakeLists.txt  test_filesystem.cpp
python/: CMakeLists.txt  cgl_pybind.cpp  holders.h  requirements.txt
src/resources/: anime_resource_data_reader.cpp  anime_resource_info_reader.cpp  graphics_resource_file_data_reader.cpp  graphics_resource_file_info_reader.cpp  palette_reader.cpp
src/settings/: settings_loader.cpp
src/utils/: common.h  enum_string_helper.cpp  file_utils.h  logger.cpp  logger.h
tests/: CMakeLists.txt
tests/resources/: test_anime_resource_data_reader.cpp  test_anime_resource_info_reader.cpp  test_graphics_resource_file_data_reader.cpp  test_graphics_resource_file_info_reader.cpp  test_palette_reader.cpp
tests/settings/: test_settings_loader.cpp
tests/utils/: test_file_utils.cpp  test_logger.cpp
tools/AnimeViewer/: anime_viewer.py
tools/python/: CMakeLists.txt  cgl_pybind.cpp  holders.h  requirements.txt
(+65 files in other folders)
